update: 自动滚动到底部 1. 按下回车发送消息 2. 打开页面时滚动到底部 3. 生成回答时滚动到底部

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,9 +14,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+#app {
+  width: 100vw;
+  height: 100vh;
 }
